force-app/main/default/objects/SEG_Plantilla__c/SEG_Plantilla__c.object-meta.xml
<CustomObject>
    <label>Plantilla</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plantilla</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>