force-app/main/default/objects/SEG_Plantilla__c/fields/Reclamaciones__c.field-meta.xml
<CustomField>
    <fullName>Reclamaciones__c</fullName>
    <label>Reclamaciones</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SEG_TipoOperativa__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SEG_Reclamaciones</valueSetName>
    </valueSet>
</CustomField>