force-app/main/default/objects/SEG_Plantilla__c/fields/SEG_Activa__c.field-meta.xml
<CustomField>
    <fullName>SEG_Activa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activa</label>
    <type>Checkbox</type>
</CustomField>