force-app/main/default/objects/SEG_Plantilla__c/fields/SEG_Organizacion__c.field-meta.xml
<CustomField>
    <fullName>SEG_Organizacion__c</fullName>
    <label>Organización</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SEG_Organizacion_Segmentos</valueSetName>
    </valueSet>
</CustomField>