force-app/main/default/objects/SEG_Plantilla__c/fields/SEG_Parte__c.field-meta.xml
<CustomField>
    <fullName>SEG_Parte__c</fullName>
    <label>Parte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cuerpo</fullName>
            </value>
            <value>
                <fullName>Pie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>