force-app/main/default/objects/SEG_Plantilla__c/fields/SEG_PlantillaCastellano__c.field-meta.xml
<CustomField>
    <fullName>SEG_PlantillaCastellano__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plantilla Castellano</label>
    <length>100</length>
    <type>Text</type>
</CustomField>