force-app/main/default/objects/SEG_Plantilla__c/fields/SEG_PlantillaCastellanoID__c.field-meta.xml
<CustomField>
    <fullName>SEG_PlantillaCastellanoID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plantilla Castellano ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>