force-app/main/default/objects/SEG_Plantilla__c/fields/SEG_PlantillaCatalanID__c.field-meta.xml
<CustomField>
    <fullName>SEG_PlantillaCatalanID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plantilla Catalán ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>