force-app/main/default/objects/SEG_Plantilla__c/fields/SEG_PlantillaIngles__c.field-meta.xml
<CustomField>
    <fullName>SEG_PlantillaIngles__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plantilla Inglés</label>
    <length>100</length>
    <type>Text</type>
</CustomField>