force-app/main/default/objects/SEG_Plantilla__c/fields/SEG_PlantillaInglesID__c.field-meta.xml
<CustomField>
    <fullName>SEG_PlantillaInglesID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plantilla Inglés ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>