force-app/main/default/objects/SEG_Plantilla__c/fields/SEG_Resultado__c.field-meta.xml
<CustomField>
    <fullName>SEG_Resultado__c</fullName>
    <label>Resultado</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SEG_TipoOperativa__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SEG_Resultado</valueSetName>
    </valueSet>
</CustomField>