force-app/main/default/objects/SEG_Plantilla__c/fields/SEG_TipoOperativa__c.field-meta.xml
<CustomField>
    <fullName>SEG_TipoOperativa__c</fullName>
    <label>Tipo de operativa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acuse de recibo</fullName>
            </value>
            <value>
                <fullName>Firma</fullName>
            </value>
            <value>
                <fullName>Cierre</fullName>
            </value>
            <value>
                <fullName>Cierre Caso Padre</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Reclamaciones</fullName>
            </value>
            <value>
                <fullName>Acuse de recibo Reciclado</fullName>
            </value>
            <value>
                <fullName>Envío automático gestor</fullName>
            </value>
            <value>
                <fullName>Valija</fullName>
            </value>
            <value>
                <fullName>Acuse de correo reciclado</fullName>
                <isActive>false</isActive>
                <label>Acuse de correo reciclado</label>
            </value>
            <value>
                <fullName>Autoasignación</fullName>
                <isActive>false</isActive>
                <label>Autoasignación</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>