force-app/main/default/objects/SEG_Plantilla__c/fields/SEG_Zona__c.field-meta.xml
<CustomField>
    <fullName>SEG_Zona__c</fullName>
    <label>Zona</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SEG_Zona_Segmentos</valueSetName>
    </valueSet>
</CustomField>