force-app/main/default/objects/SEG_Plantilla__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SEG_Activa__c</columns>
    <columns>SEG_Confidencial__c</columns>
    <columns>SEG_TipoOperativa__c</columns>
    <columns>SEG_Organizacion__c</columns>
    <columns>SEG_Zona__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>